docs/stylesheets/extra.css
.md-typeset .admonition,
.md-typeset details {
  font-size: 1.0em;
}

.md-typeset .admonition.tip,
.md-typeset details {
  border-color: #888888;
}

.md-typeset .tip>.admonition-title,
.md-typeset .tip>summary {
  background-color: #888;
}

.md-typeset .tip>.admonition-title:before, 
.md-typeset .tip>summary:before {
  background-color: #000;
}

.circlenum {
	font-weight: bold;
	float: left;
	width: 30px;
	height: 30px;
	align-items: center;
	text-align: center;
	border-radius: 50%;
	padding: 2px;
	margin: 2px;
}

.whitenum { background: white; color: black; border-color: black; border-width: 1px; }
.rednum { background: red; color: black; }
.orangenum { background: orange; color: black; }
.yellownum { background: yellow; color: black; }
.greennum { background: lime; color: black; }
.cyannum { background: cyan; color: black; }
.bluenum { background: blue; color: white; }
.purplenum { background: purple; color: white; }


.mm-lightblue { text-decoration: underline; color: #c3ceda; }

.half { width: auto; max-height: 240px; }

.img-360 { width: auto; max-height: 360px; }

.wide-240 { width: 240px; }

.img-550 { width: auto; max-height: 550px; }

.img-511 { width: auto; max-height: 511px; }
.img-567 { width: auto; max-height: 567px; }
.img-630 { width: auto; max-height: 630px; }

.md-typeset .grid.cards>ul>li {
	border-width: 0.06rem;
	border-color: #888;
}

.md-typeset li {
	line-height: 1.4;
}
.md-typeset li li::marker {
	content: '– ';
}

.md-typeset h1,.md-typeset h2 {
	font-weight: 600;
}

.md-typeset h3 {
	font-weight: 500;
}

.md-typeset p {
	font-weight: 300;
	font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
}

.md-typeset strong {
	font-weight: 700;
}

.md-typeset .grid.cards>ol>li:focus-within, .md-typeset .grid.cards>ol>li:hover, .md-typeset .grid.cards>ul>li:focus-within, .md-typeset .grid.cards>ul>li:hover, .md-typeset .grid>.card:focus-within, .md-typeset .grid>.card:hover {
    border-color: #888;
    box-shadow: none;

h2 {
	border-bottom-width: 0.06rem;
}

h3 {
	border-bottom-width: 0.03rem;
	border-color: #888;
	width: fit-content;
}

@media (max-width: 880px) {
  .sm-sm {
	font-size:0.85rem;
	padding-right:10px;
  }
}

@media (max-width: 640px) {
  .sm-hide {
    display: none;
  }
}

@media (min-width:100em) {
  .sm-sm {
    font-size:100%
  }
}

@media (min-width:125em) {
  .sm-sm {
    font-size:100%
  }
}

ol, menu {
  list-style-type: decimal;
  margin: 0;
  padding: 0;
}

